# elocfb

./: CMakeLists.txt  README.md
scripts/: genbuild.pl
scripts/templates/: gencmake.sh.m4
src/: CMakeLists.txt  algorithms.c  algorithms.h  commands.h  database.c  database.h  main.c  options.h  output.c  output.h  parse.h  parse_ncaa.c  results.c  results.h  teams.c  teams.h
src/algorithms/: CMakeLists.txt  algos.c  elo.c  rpi.c  winper.c
src/commands/: CMakeLists.txt  algo.c  init.c  parse.c  process.c
