
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

# set up compiler flags
SET (CMAKE_C_FLAGS                "-Wall -Wextra -pedantic --std=c99")
SET (CMAKE_C_FLAGS_DEBUG          "-g")
SET (CMAKE_C_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
SET (CMAKE_C_FLAGS_RELEASE        "-O4 -DNDEBUG")
SET (CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -g")

# set up the project
PROJECT (SHINY-AVENGER)
SET (SHINY-AVENGER_VERSION_MAJOR 0)
SET (SHINY-AVENGER_VERSION_MINOR 1)

# set up project directories
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)

# descend into project
ADD_SUBDIRECTORY (src)
